Some progress on linking of expression chains.